<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_intro_pad"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_intro_height"
        android:background="@color/colorSecond"
        android:lineSpacingExtra="18sp"
        android:padding="@dimen/text_res_padding"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/banner_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_name_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/name_first_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/text_res_padding"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="@dimen/result_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_intro_pad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_intro_pad"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/input_name_second"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/name_second_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/text_res_padding"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="@dimen/result_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name_first" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecond"
        android:text="@string/btn_action"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/main_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/final_score_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_intro_pad" />

    <TextView
        android:id="@+id/hashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title_kr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:id="@+id/main_title_kor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_title_kor"
        android:textColor="@android:color/black"
        android:textSize="@dimen/result_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashtag" />

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_desc_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title_kor" />

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/great_vibes"
        android:text="@string/title_text"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_intro_pad"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>